# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

group("build_module") {
  deps = []
  if (relational_store_rdb_support_icu) {
    deps += [ ":relational_store_icu" ]
  }
}

ohos_shared_library("relational_store_icu") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "${relational_store_common_path}/include",
    "${relational_store_native_path}/icu/include",
    "${relational_store_innerapi_path}/rdb/include",
    "${relational_store_native_path}/rdb/include",
  ]

  sources = [ "${relational_store_native_path}/icu/src/icu_collect.cpp" ]

  external_deps = [
    "hilog:libhilog",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "sqlite:sqlite",
  ]
  if (is_android) {
    external_deps += [ "${plugins_path}/libs/icu:icu_android" ]
  } else if (is_ios) {
    external_deps += [ "${plugins_path}/libs/icu:icu_ios" ]
  }
  subsystem_name = "distributeddatamgr"
  part_name = "relational_store"
}
