# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

config("appdatafwk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb/include",
  ]
  cflags_cc = [ "-fvisibility=hidden" ]
}

config("appdatafwk_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("native_appdatafwk") {
  sources =
      [ "${relational_store_native_path}/appdatafwk/src/shared_block.cpp" ]

  configs = [ ":appdatafwk_config" ]

  subsystem_name = "distributeddatamgr"
  part_name = "relational_store"

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "ipc:ipc_single",
  ]

  public_configs = [ ":appdatafwk_public_config" ]
}
