# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
config("cloud_public_config") {
  visibility = [
    "../../../../datamgr_service:*",
    "../../../../relational_store:*"
  ]

  include_dirs = [
    "include",
  ]
}

ohos_static_library("cloud_data_inner") {
  part_name = "relational_store"
  public_configs = [ ":cloud_public_config" ]
  subsystem_name = "distributeddatamgr"
}
