# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")
config("cloud_public_config") {
  visibility = [
    "${distributeddata_base_path}/datamgr_service/*",
    "${distributeddata_base_path}/relational_store/*",
  ]

  include_dirs = [
    "include",
    "${relational_store_innerapi_path}/common_type/include",
    "${relational_store_innerapi_path}/rdb/include",
  ]
}

config("cloud_data_native_config") { 
  visibility = [ ":*" ]
  include_dirs = [
    "${cloud_data_native_path}/include",
    "${relational_store_common_path}/include",
  ]
}

ohos_shared_library("cloud_data_native") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":cloud_data_native_config" ]
  public_configs = [ ":cloud_public_config" ]
  cflags_cc = [ "-fvisibility=hidden" ]
  sources = [
    "${cloud_data_native_path}/src/cloud_manager.cpp",
    "${cloud_data_native_path}/src/cloud_notifier_stub.cpp",
    "${cloud_data_native_path}/src/cloud_service_proxy.cpp",
    "${cloud_data_native_path}/src/cloud_types_util.cpp",
  ]
  deps = ["${relational_store_innerapi_path}/rdb:native_rdb",]
  external_deps = [ 
    "hilog:libhilog",
    "kv_store:datamgr_common",
    "c_utils:utils",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  part_name = "relational_store"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "distributeddatamgr"
}

ohos_static_library("cloud_data_inner") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  part_name = "relational_store"
  public_configs = [ ":cloud_public_config" ]
  subsystem_name = "distributeddatamgr"
}
