# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

config("common_type_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "include",
    "${kvstore_path}/common"
  ]
}

ohos_shared_library("common_type") {
  part_name = "relational_store"

  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  cflags_cc = [ "-fvisibility=hidden" ]

  public_configs = [ ":common_type_config" ]

  sources = [
    "src/value_object.cpp",
    "src/values_bucket.cpp",
    "src/commontype_util.cpp"
  ]

  external_deps = [
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "c_utils:utils",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "distributeddatamgr"
}
